corrected add shift form formatting, disabled applying shifts to past weeks and adding a shift to a past day

--- a/src/components/Scheduling/AddShift/styles.css
+++ b/src/components/Scheduling/AddShift/styles.css
@@ -77,6 +77,7 @@
 .modal-selection-body {
 	padding:2px 16px;
 	height:300px;
+	align-items: center;
 }
 .modal-selection-footer{
 	padding:2px 16px;
@@ -171,4 +172,3 @@
 .default{
   color: "#838890" !important;
 }
-
